--- a/Estatistica aplicada/Modulo02/ClassedeAmplitude.ipynb
+++ b/Estatistica aplicada/Modulo02/ClassedeAmplitude.ipynb
@@ -10,16 +10,16 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.8"
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python385jvsc74a57bd0eaa7843e8493900614d66ccc65364a0507da7ffc1172ab319309591e987c6904",
-   "display_name": "Python 3.8.5 64-bit ('base': conda)"
+   "name": "python388jvsc74a57bd09f79a78ce700dc9ff665ee7cc6278cda072f0dd4d665ccc90c9ee94d34c8ab3a",
+   "display_name": "Python 3.8.8 64-bit"
   },
   "metadata": {
    "interpreter": {
-    "hash": "eaa7843e8493900614d66ccc65364a0507da7ffc1172ab319309591e987c6904"
+    "hash": "9f79a78ce700dc9ff665ee7cc6278cda072f0dd4d665ccc90c9ee94d34c8ab3a"
    }
   }
  },
@@ -33,7 +33,7 @@
     "id": "uIb17Es3jQMP"
    },
    "source": [
-    "# <font color=green>4 Medidas de Tendência Central</font>\n",
+    "# <font color=green>classes de amplitude fixa</font>\n",
     "***"
    ]
   },
@@ -58,129 +58,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 35
-    },
-    "colab_type": "code",
-    "id": "QW4JPcBmX7IA",
-    "outputId": "45810cfa-fba2-4bf3-b571-eddd9d8ebd09"
-   },
-   "outputs": [],
-   "source": [
-    "alunos = ['Maria', 'Pedro', 'João', 'Ana', 'Paulo']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 35
-    },
-    "colab_type": "code",
-    "id": "LuT8WNy5X7IB",
-    "outputId": "1fde4b44-b250-41d9-ff02-70c9a0e05aca"
-   },
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: []\n",
-       "Index: [Maria, Pedro, João, Ana, Paulo]"
-      ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>Maria</th>\n    </tr>\n    <tr>\n      <th>Pedro</th>\n    </tr>\n    <tr>\n      <th>João</th>\n    </tr>\n    <tr>\n      <th>Ana</th>\n    </tr>\n    <tr>\n      <th>Paulo</th>\n    </tr>\n  </tbody>\n</table>\n</div>"
-     },
-     "metadata": {},
-     "execution_count": 3
-    }
-   ],
-   "source": [
-    "df = pd.DataFrame(index = alunos)\n",
-    "df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 35
-    },
-    "colab_type": "code",
-    "id": "BRMZcmMEjQMQ",
-    "outputId": "5f3334d9-0f5f-40e2-e2b7-191e0bc3a5d6"
-   },
-   "outputs": [],
-   "source": [
-    "df['MTM']= [6, 8, 5, 9, 7]\n",
-    "#df['MTM'].mean()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 89
-    },
-    "colab_type": "code",
-    "id": "CGgJbsK0HBQc",
-    "outputId": "35b8a334-5f7d-4f17-ec85-2e10ec6ae5ab"
-   },
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "       MTM  PT\n",
-       "Maria    6   7\n",
-       "Pedro    8   5\n",
-       "João     5   9\n",
-       "Ana      9   6\n",
-       "Paulo    7   4"
-      ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>MTM</th>\n      <th>PT</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>Maria</th>\n      <td>6</td>\n      <td>7</td>\n    </tr>\n    <tr>\n      <th>Pedro</th>\n      <td>8</td>\n      <td>5</td>\n    </tr>\n    <tr>\n      <th>João</th>\n      <td>5</td>\n      <td>9</td>\n    </tr>\n    <tr>\n      <th>Ana</th>\n      <td>9</td>\n      <td>6</td>\n    </tr>\n    <tr>\n      <th>Paulo</th>\n      <td>7</td>\n      <td>4</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
-     },
-     "metadata": {},
-     "execution_count": 5
-    }
-   ],
-   "source": [
-    "df['PT'] = [7, 5, 9, 6, 4]\n",
-    "df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "7.0"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 6
-    }
-   ],
-   "source": [
-    "df['MTM'].mean()"
+    "import pandas as pd\n",
+    "import numpy as np"
    ]
   },
   {
@@ -189,34 +68,45 @@
    ],
    "cell_type": "code",
    "metadata": {},
-   "execution_count": 7,
+   "execution_count": 4,
    "outputs": []
   },
   {
    "source": [
-    "## Outro dataset"
+    "regra de sturges k= 1+ 10/3 *log N\n",
+    "onde n é a quantidade de amostras(vulgo shape) e k é a quantidade de classes."
    ],
    "cell_type": "markdown",
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n = dados.shape[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "2000.3831988547631"
+       "17"
       ]
      },
      "metadata": {},
-     "execution_count": 8
+     "execution_count": 10
     }
    ],
    "source": [
-    "dados['Renda'].mean()"
+    "k = 1 + (10/3) * np.log10(dados.shape[0])\n",
+    "k = int(k.round(0))"
    ]
   },
   {
@@ -228,10 +118,7 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "Sexo\n",
-       "0    2192.441596\n",
-       "1    1566.847393\n",
-       "Name: Renda, dtype: float64"
+       "17"
       ]
      },
      "metadata": {},
@@ -239,94 +126,7 @@
     }
    ],
    "source": [
-    "dados.groupby(['Sexo'])['Renda'].mean()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "adf = pd.DataFrame()\n",
-    "adf['Sexo'] = dados['Sexo']\n",
-    "adf['Renda'] = dados['Renda']\n"
-   ]
-  },
-  {
-   "source": [
-    "## Mediana\n"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "7.0"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 12
-    }
-   ],
-   "source": [
-    "df['MTM'].median()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "       MTM  PT  ING\n",
-       "Maria    6   7    5\n",
-       "Pedro    8   5    6\n",
-       "João     5   9    4\n",
-       "Ana      9   6    4\n",
-       "Paulo    7   4   10"
-      ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>MTM</th>\n      <th>PT</th>\n      <th>ING</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>Maria</th>\n      <td>6</td>\n      <td>7</td>\n      <td>5</td>\n    </tr>\n    <tr>\n      <th>Pedro</th>\n      <td>8</td>\n      <td>5</td>\n      <td>6</td>\n    </tr>\n    <tr>\n      <th>João</th>\n      <td>5</td>\n      <td>9</td>\n      <td>4</td>\n    </tr>\n    <tr>\n      <th>Ana</th>\n      <td>9</td>\n      <td>6</td>\n      <td>4</td>\n    </tr>\n    <tr>\n      <th>Paulo</th>\n      <td>7</td>\n      <td>4</td>\n      <td>10</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
-     },
-     "metadata": {},
-     "execution_count": 13
-    }
-   ],
-   "source": [
-    "df['ING'] = [5,6,4,4,10]\n",
-    "df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "4"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 14
-    }
-   ],
-   "source": [
-    "df['ING'].mean()\n",
-    "df['ING'].median()\n",
-    "df['ING'].mode()[0]"
+    "k"
    ]
   },
   {
