--- a/Estatistica aplicada/Modulo02/ClassedeAmplitude.ipynb
+++ b/Estatistica aplicada/Modulo02/ClassedeAmplitude.ipynb
@@ -15,7 +15,7 @@
   "orig_nbformat": 2,
   "kernelspec": {
    "name": "python388jvsc74a57bd09f79a78ce700dc9ff665ee7cc6278cda072f0dd4d665ccc90c9ee94d34c8ab3a",
-   "display_name": "Python 3.8.8 64-bit"
+   "display_name": "Python 3.8.8 64-bit ('py38': conda)"
   },
   "metadata": {
    "interpreter": {
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,8 +68,15 @@
    ],
    "cell_type": "code",
    "metadata": {},
-   "execution_count": 4,
+   "execution_count": 3,
    "outputs": []
+  },
+  {
+   "source": [
+    "### <font color='green'> Passo 1 - Definir número de classes </font>"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "source": [
@@ -81,11 +88,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "n = dados.shape[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "k = 1 + (10/3) * np.log10(dados.shape[0])\n",
+    "k = int(k.round(0))"
+   ]
+  },
+  {
+   "source": [
+    "### Passo 2  - Criar tabelas de frequência"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "(-200.001, 11764.706]       75594\n",
+       "(11764.706, 23529.412]       1022\n",
+       "(23529.412, 35294.118]        169\n",
+       "(35294.118, 47058.824]         19\n",
+       "(47058.824, 58823.529]         16\n",
+       "(58823.529, 70588.235]          5\n",
+       "(70588.235, 82352.941]          4\n",
+       "(82352.941, 94117.647]          1\n",
+       "(94117.647, 105882.353]         6\n",
+       "(105882.353, 117647.059]        0\n",
+       "(117647.059, 129411.765]        1\n",
+       "(129411.765, 141176.471]        0\n",
+       "(141176.471, 152941.176]        0\n",
+       "(152941.176, 164705.882]        0\n",
+       "(164705.882, 176470.588]        0\n",
+       "(176470.588, 188235.294]        0\n",
+       "(188235.294, 200000.0]          3\n",
+       "Name: Renda, dtype: int64"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 6
+    }
+   ],
+   "source": [
+    "freq_abs = pd.value_counts(pd.cut(x = dados.Renda, bins = k, include_lowest = True), sort = False)\n",
+    "freq_abs"
    ]
   },
   {
@@ -97,7 +159,24 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "17"
+       "(-200.001, 11764.706]       98.378449\n",
+       "(11764.706, 23529.412]       1.330036\n",
+       "(23529.412, 35294.118]       0.219938\n",
+       "(35294.118, 47058.824]       0.024727\n",
+       "(47058.824, 58823.529]       0.020822\n",
+       "(58823.529, 70588.235]       0.006507\n",
+       "(70588.235, 82352.941]       0.005206\n",
+       "(82352.941, 94117.647]       0.001301\n",
+       "(94117.647, 105882.353]      0.007808\n",
+       "(105882.353, 117647.059]     0.000000\n",
+       "(117647.059, 129411.765]     0.001301\n",
+       "(129411.765, 141176.471]     0.000000\n",
+       "(141176.471, 152941.176]     0.000000\n",
+       "(152941.176, 164705.882]     0.000000\n",
+       "(164705.882, 176470.588]     0.000000\n",
+       "(176470.588, 188235.294]     0.000000\n",
+       "(188235.294, 200000.0]       0.003904\n",
+       "Name: Renda, dtype: float64"
       ]
      },
      "metadata": {},
@@ -105,28 +184,47 @@
     }
    ],
    "source": [
-    "k = 1 + (10/3) * np.log10(dados.shape[0])\n",
-    "k = int(k.round(0))"
+    "freq_pct = pd.value_counts(pd.cut(x = dados.Renda, bins = k, include_lowest = True), sort = False, normalize = True) * 100\n",
+    "freq_pct"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "17"
-      ]
+       "                           Freq    Pct(%):\n",
+       "(-200.001, 11764.706]     75594  98.378449\n",
+       "(11764.706, 23529.412]     1022   1.330036\n",
+       "(23529.412, 35294.118]      169   0.219938\n",
+       "(35294.118, 47058.824]       19   0.024727\n",
+       "(47058.824, 58823.529]       16   0.020822\n",
+       "(58823.529, 70588.235]        5   0.006507\n",
+       "(70588.235, 82352.941]        4   0.005206\n",
+       "(82352.941, 94117.647]        1   0.001301\n",
+       "(94117.647, 105882.353]       6   0.007808\n",
+       "(105882.353, 117647.059]      0   0.000000\n",
+       "(117647.059, 129411.765]      1   0.001301\n",
+       "(129411.765, 141176.471]      0   0.000000\n",
+       "(141176.471, 152941.176]      0   0.000000\n",
+       "(152941.176, 164705.882]      0   0.000000\n",
+       "(164705.882, 176470.588]      0   0.000000\n",
+       "(176470.588, 188235.294]      0   0.000000\n",
+       "(188235.294, 200000.0]        3   0.003904"
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Freq</th>\n      <th>Pct(%):</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>(-200.001, 11764.706]</th>\n      <td>75594</td>\n      <td>98.378449</td>\n    </tr>\n    <tr>\n      <th>(11764.706, 23529.412]</th>\n      <td>1022</td>\n      <td>1.330036</td>\n    </tr>\n    <tr>\n      <th>(23529.412, 35294.118]</th>\n      <td>169</td>\n      <td>0.219938</td>\n    </tr>\n    <tr>\n      <th>(35294.118, 47058.824]</th>\n      <td>19</td>\n      <td>0.024727</td>\n    </tr>\n    <tr>\n      <th>(47058.824, 58823.529]</th>\n      <td>16</td>\n      <td>0.020822</td>\n    </tr>\n    <tr>\n      <th>(58823.529, 70588.235]</th>\n      <td>5</td>\n      <td>0.006507</td>\n    </tr>\n    <tr>\n      <th>(70588.235, 82352.941]</th>\n      <td>4</td>\n      <td>0.005206</td>\n    </tr>\n    <tr>\n      <th>(82352.941, 94117.647]</th>\n      <td>1</td>\n      <td>0.001301</td>\n    </tr>\n    <tr>\n      <th>(94117.647, 105882.353]</th>\n      <td>6</td>\n      <td>0.007808</td>\n    </tr>\n    <tr>\n      <th>(105882.353, 117647.059]</th>\n      <td>0</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>(117647.059, 129411.765]</th>\n      <td>1</td>\n      <td>0.001301</td>\n    </tr>\n    <tr>\n      <th>(129411.765, 141176.471]</th>\n      <td>0</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>(141176.471, 152941.176]</th>\n      <td>0</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>(152941.176, 164705.882]</th>\n      <td>0</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>(164705.882, 176470.588]</th>\n      <td>0</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>(176470.588, 188235.294]</th>\n      <td>0</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>(188235.294, 200000.0]</th>\n      <td>3</td>\n      <td>0.003904</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 9
+     "execution_count": 11
     }
    ],
    "source": [
-    "k"
+    "dist_freq_qtd_amp_fixa = pd.DataFrame({'Freq':freq_abs, 'Pct(%):':freq_pct})\n",
+    "dist_freq_qtd_amp_fixa"
    ]
   },
   {
