--- a/Estatistica aplicada/Modulo03/dis_binomial.ipynb
+++ b/Estatistica aplicada/Modulo03/dis_binomial.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "source": [
-    "### Qual n de ensaiors?"
+    "### Qual n de ensaios?"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -149,11 +149,51 @@
    ]
   },
   {
+   "source": [
+    "Uma cidade do interior realiza todos os anos uma gincana para arrecadar fundos para o hospital da cidade. Na última gincana se sabe que a **proporção de participantes do sexo feminino foi de 60%**. **O total de equipes, com 12 integrantes, inscritas na gincana deste ano é de 30**. Com as informações acima responda: Quantas equipes deverão ser formadas por **8 mulheres**?"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "p = 0.6\n",
+    "q = 1-p\n",
+    "n = 12\n",
+    "k = 8"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prob = binom.pmf(k,n,p)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "equipes = prob * 30"
+   ]
+  },
+  {
+   "source": [
+    "Os dados são baseados na probabilidade de ter uma quantidade x de meninas na prova, então \n",
+    "p é a probabilidade do participante em questão ser uma mulher(60% de chance de acordo com estudo anterior\n",
+    "N é o número de participantes da equipe, e 8 a quantidade de sucessos desejada na série.\n",
+    "Após este calculo unitário o resultado é multiplicado por 30 para se ter a visão da competição e não apenas de uma equipe."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   }
  ]
 }
