--- a/Estatistica aplicada/Modulo03/dist_poison.ipynb
+++ b/Estatistica aplicada/Modulo03/dist_poison.ipynb
@@ -10,9 +10,18 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": 3
+   "version": "3.8.8"
   },
-  "orig_nbformat": 2
+  "orig_nbformat": 2,
+  "kernelspec": {
+   "name": "python388jvsc74a57bd09f79a78ce700dc9ff665ee7cc6278cda072f0dd4d665ccc90c9ee94d34c8ab3a",
+   "display_name": "Python 3.8.8 64-bit ('py38': conda)"
+  },
+  "metadata": {
+   "interpreter": {
+    "hash": "9f79a78ce700dc9ff665ee7cc6278cda072f0dd4d665ccc90c9ee94d34c8ab3a"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2,
@@ -30,15 +39,74 @@
    ],
    "cell_type": "code",
    "metadata": {},
-   "execution_count": null,
+   "execution_count": 4,
    "outputs": []
+  },
+  {
+   "source": [
+    "# $$P(k) = \\frac{e^{-\\mu}(\\mu)^k}{k!}$$\n",
+    "\n",
+    "Onde:\n",
+    "\n",
+    "$e$ = constante cujo valor aproximado é 2,718281828459045\n",
+    "\n",
+    "$\\mu$ = representa o número médio de ocorrências em um determinado intervalo de tempo ou espaço\n",
+    "\n",
+    "$k$ = número de sucessos no intervalo desejado"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "media = 20\n",
+    "k = 15"
+   ]
+  },
+  {
+   "source": [
+    "### Solução 1"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prob = ((np.e ** (-media)) * (media ** k)) / (np.math.factorial(k))"
+   ]
+  },
+  {
+   "source": [
+    "### Solucao 2"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy.stats import poisson"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "prob = poisson.pmf(k,media)"
+   ]
   }
  ]
 }
