--- a/Estatistica aplicada/Modulo03/dist_normal.ipynb
+++ b/Estatistica aplicada/Modulo03/dist_normal.ipynb
@@ -118,6 +118,8 @@
   },
   {
    "source": [
+    "> **A.** probabilidade de uma pessoa, selecionada ao acaso, ter menos de 1,80 metros.\n",
+    "\n",
     "### Obter a variável padronizada $Z$"
    ],
    "cell_type": "markdown",
@@ -220,6 +222,8 @@
   },
   {
    "source": [
+    "> **B.** probabilidade de uma pessoa, selecionada ao acaso, ter entre 1,60 metros e 1,80 metros.    \n",
+    "\n",
     "### Obter a variável padronizada $Z$ inferior e superior\n"
    ],
    "cell_type": "markdown",
@@ -269,6 +273,49 @@
     "prob = norm.cdf(z_sup) - (1 - norm.cdf(z_sup))\n",
     "# ou\n",
     "prob = norm.cdf(z_sup) - (norm.cdf(z_inf))"
+   ]
+  },
+  {
+   "source": [
+    "> **C.** probabilidade de uma pessoa, selecionada ao acaso, ter mais de 1,90 metros."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "### Problema B - Identificação da área sob a curva\n",
+    "<img style='float: left' src='https://caelum-online-public.s3.amazonaws.com/1178-estatistica-parte2/01/img006.png' width='350px'>"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "z= (1.9 - media) /desvio_padrao\n",
+    "prob = 1 - 0.9767 # na tabela"
+   ]
+  },
+  {
+   "source": [
+    "### Scipy"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prob = 1 - norm.cdf(z)\n",
+    "#OU\n",
+    "prob = norm.cdf(-z)"
    ]
   },
   {
