--- a/Estatistica aplicada/Modulo03/dist_normal.ipynb
+++ b/Estatistica aplicada/Modulo03/dist_normal.ipynb
@@ -284,7 +284,7 @@
   },
   {
    "source": [
-    "### Problema B - Identificação da área sob a curva\n",
+    "### Problema C - Identificação da área sob a curva\n",
     "<img style='float: left' src='https://caelum-online-public.s3.amazonaws.com/1178-estatistica-parte2/01/img006.png' width='350px'>"
    ],
    "cell_type": "markdown",
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
